--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,5 @@
         "../lib/Python3.8/site-packages/",
     ],
     "python.autoComplete.addBrackets": true,
+    "python.pythonPath": "../bin/python3",
 }
