--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,16 @@ astroid==2.4.2
 boto3==1.14.55
 botocore==1.17.55
 Django==3.1.1
+django-markdownx==3.0.1
+django-storages==1.10
 docutils==0.15.2
 isort==5.5.0
 jmespath==0.10.0
 lazy-object-proxy==1.4.3
+Markdown==3.2.2
 mccabe==0.6.1
 Pillow==7.2.0
+pylint==2.6.0
 python-dateutil==2.8.1
 pytz==2020.1
 s3transfer==0.3.3
