--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "python.linting.pylintEnabled": true,
+    "python.linting.pylintArgs": [
+        "--enable=W0614"
+    ],
     "python.linting.enabled": true,
     "python.autoComplete.extraPaths": [
         "../lib/Python3.8/site-packages/",
