--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ boto3==1.14.55
 botocore==1.17.55
 Django==3.1.1
 django-markdownx==3.0.1
+django-richtextfield==1.6
 django-storages==1.10
 docutils==0.15.2
 isort==5.5.0
@@ -12,6 +13,7 @@ lazy-object-proxy==1.4.3
 Markdown==3.2.2
 mccabe==0.6.1
 Pillow==7.2.0
+psycopg2-binary==2.8.6
 pylint==2.6.0
 python-dateutil==2.8.1
 pytz==2020.1
