--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -60,6 +60,7 @@ jobs:
         run: |
           python manage.py test --noinput
       - name: Collect static
+        run: |
           python manage.py collectstatic
       - name: Make migrations
         run: |
