--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,16 +24,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: Setup Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-      - name: Install Node dependancies
-        run: npm ci
-      - name: Node build
-        run: npm run build --if-present
-      - name: Node test
-        run: npm test
+      #- name: Setup Node
+      #  uses: actions/setup-node@v1
+      #  with:
+      #    node-version: 14.x
+      #- name: Install Node dependancies
+      #  run: npm ci
+      #- name: Node build
+      #  run: npm run build --if-present
+      #- name: Node test
+      #  run: npm test
         
       - name: Setup Python
         uses: actions/setup-python@v2
