--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -41,13 +41,13 @@ jobs:
           python-version: 3.8
         env:
           DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-          DJANGO_DEBUG: '0'
-          DJANGO_ALLOWED_HOSTS: ''
+          DJANGO_DEBUG: "0"
+          DJANGO_ALLOWED_HOSTS: ""
           DATABASE_USER: ${{ secrets.DATABASE_USER }}
           DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
           DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
-          EMAIL_USER: ''
-          EMAIL_PASSWORD: ''
+          EMAIL_USER: ""
+          EMAIL_PASSWORD: ""
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_STORAGE_BUCKET_NAME: ${{ secrets.AWS_STORAGE_BUCKET_NAME }}
