--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -20,17 +20,17 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+      DJANGO_SECRET_KEY: "${{ secrets.DJANGO_SECRET_KEY }}"
       DJANGO_DEBUG: "0"
       DJANGO_ALLOWED_HOSTS: ""
-      DATABASE_USER: ${{ secrets.DATABASE_USER }}
-      DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-      DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
+      DATABASE_USER: "${{ secrets.DATABASE_USER }}"
+      DATABASE_PASSWORD: "${{ secrets.DATABASE_PASSWORD }}"
+      DATABASE_HOST: "${{ secrets.DATABASE_HOST }}"
       EMAIL_USER: ""
       EMAIL_PASSWORD: ""
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_STORAGE_BUCKET_NAME: ${{ secrets.AWS_STORAGE_BUCKET_NAME }}
+      AWS_ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY_ID }}"
+      AWS_SECRET_ACCESS_KEY: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+      AWS_STORAGE_BUCKET_NAME: "${{ secrets.AWS_STORAGE_BUCKET_NAME }}"
 
     steps:
       - name: Checkout
