--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,9 +23,9 @@ jobs:
       DJANGO_SECRET_KEY: "${{ secrets.DJANGO_SECRET_KEY }}"
       DJANGO_DEBUG: "0"
       DJANGO_ALLOWED_HOSTS: ""
-      DATABASE_USER: "${{ secrets.DATABASE_USER }}"
-      DATABASE_PASSWORD: "${{ secrets.DATABASE_PASSWORD }}"
-      DATABASE_HOST: "${{ secrets.DATABASE_HOST }}"
+      DATABASE_USER: ${{ secrets.DATABASE_USER }}
+      DATABASE_PASSWORD: '${{ secrets.DATABASE_PASSWORD }}'
+      DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
       EMAIL_USER: ""
       EMAIL_PASSWORD: ""
       AWS_ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY_ID }}"
