--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -70,7 +70,7 @@ jobs:
         with:
           node-version: 14.x
       - name: Install Node dependancies
-        run: npm ci
+        run: npm ci --if-present
       - name: Node build
         run: npm run build --if-present -- --no-watch
       - name: Node test
