--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Test Django=${{ matrix.django-version }}, Python=${{ matrix.python-version }}
         run: |
           python manage.py test --noinput
-'
+
   # Build job to build static files
   build_and_deploy_static:
     # Dependant on test passing
@@ -65,16 +65,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: Setup Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-      - name: Install Node dependancies
-        run: npm ci --if-present
-      - name: Node build
-        run: npm run build --if-present -- --no-watch
-      - name: Node test
-        run: npm test
+      #- name: Setup Node
+      #  uses: actions/setup-node@v1
+      #  with:
+      #    node-version: 14.x
+      #- name: Install Node dependancies
+      #  run: npm ci --if-present
+      #- name: Node build
+      #  run: npm run build --if-present -- --no-watch
+      #- name: Node test
+      #  run: npm test
         
       - name: Setup Python
         uses: actions/setup-python@v2
@@ -88,7 +88,7 @@ jobs:
       - name: Collect static
         run: |
           python manage.py collectstatic --noinput
-' 
+  
         
   # Job to deploy python files to server
   deploy_to_server:
