--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -54,11 +54,12 @@ jobs:
         run: |
           python manage.py test --noinput
 
+
         
   # Job to deploy python files to server
   deploy_to_server:
     # Dependant on success of test & build_and_deploy_static
-    needs: build_and_deploy_static
+    needs: test
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
